Add infiot wired driver with support for external PAE * add a 'infwired' driver that will talk to an external PAE via   UNIX sockets to read EAP packets and also support MAB authentication

--- a/hostapd/Makefile
+++ b/hostapd/Makefile
@@ -27,6 +27,10 @@ CFLAGS += -I$(abspath ../src/utils)
 
 export BINDIR ?= /usr/local/bin/
 
+ifdef CONFIG_INF_WIRED_PAE
+CLFAGS += -DCONFIG_INF_WIRED_PAE
+endif
+
 -include .config
 
 ifndef CONFIG_NO_GITVER
