Modify hostapd to consume Infiot auth config
Add support in hostapd config to consume Infiot specific authentication
information

Re #8614

--- a/hostapd/Makefile
+++ b/hostapd/Makefile
@@ -30,6 +30,9 @@ export BINDIR ?= /usr/local/bin/
 ifdef CONFIG_INF_WIRED_PAE
 CLFAGS += -DCONFIG_INF_WIRED_PAE
 endif
+ifdef CONFIG_INF_WIRED_PAE
+CLFAGS += -DCONFIG_INF_AUTH
+endif
 
 -include .config
 
